--- a/面试/面试题_秒杀类.md
+++ b/面试/面试题_秒杀类.md
@@ -32,3 +32,9 @@ if (nowNum == nil or nowNum < 0) then
 end
 return redis.call("incrby","STOCK_KEY",INCR)
 ```
+
+FIFO队列思路
+
+a.应用层面：读写分离、缓存、队列、集群、令牌、系统拆分、隔离、系统升级（可水平扩容方向）。
+b.时间换空间：降低单次请求时间，这样在单位时间内系统并发就会提升。
+c.空间换时间：拉长整体处理业务时间，换取后台系统容量空间。
