--- a/面试/字节.md
+++ b/面试/字节.md
@@ -1,5 +1,3 @@
-[面试参考](https://www.cnblogs.com/wyp1988/p/12070850.html)
-
 一面
 1.	http状态码/header/请求方法, 哪些请求方法是幂等的
     
@@ -18,8 +16,8 @@
     http存在三个弊端：
     
     1）无法保证消息的保密性；
-    3）无法保证消息来源的可靠性。
     2）无法保证消息的完整性和准确性；
+    3）无法保证消息来源的可靠性。
     
     认证机构,加密技术,数字证书,数字签名
     加密分对称加密和非对称加密。对称加密效率高，但是解决不了密钥传输问题；非对称加密可以解决这个问题，但是效率不高。
@@ -40,15 +38,6 @@
     因为协程是一个线程执行，那怎么利用多核CPU呢？最简单的方法是多进程+协程，既充分利用多核，又充分发挥协程的高效率，可获得极高的性能。
  
 4. python GIL, 为什么有GIL 还需要threading
-    1. 问题：在CPython中，既然有了GIL，为什么还要lock?
-    2. 答案：GIL保证了在同一时刻只能有一个线程运行，而lock保证共享数据的安全。lock实现了当某个线程进入临界区时，其他线程必须等待。
-    GIL 同时只允许一个线程进行，并且不断切换。但是切换并不是意味着相关处理流程的退出，只是保存上下文后，进入另一个线程的上下文执行。
-    对于数据而言，它本身还是被多个处理流程读取，写入。而对于人而言，我们还是认为 Python 是同时进行多个任务的处理，所以对于共享的数据而言。
-    我们依旧需要同步机制去保证其正确性与可靠性。
-    为什么还需要threading?
-    因为单线程的话会被io阻塞或者被高密集型运算占用cpu,而无法去做其他的事情,threading可以把cpu时间片分出来点,执行其他操作.
-
-    
 5. python gevent协程调度原理/缺点
 
     from gevent import monkey; monkey.patch_all()
@@ -60,13 +49,11 @@
     
 6. 设计一个文本编辑器实现插入/删除/查询
 7. 头条文章向用户推送避免重复推送的问题
-这个问题太大了,重复的定义是什么,是内容同质化还是文章一模一样的被推送第二次?
 
 8. 工作中遇到的印象深刻的问题
-
 9，两个单链表求和
 10，两种存储引擎
-
+11，http的返回码
 12，mysql 索引
     主键索引是聚集索引,其他索引是非聚集索引
     主键索引的叶子节点存的是整行数据。在 InnoDB 里，主键索引也被称为聚集索引（clustered index）。
@@ -77,6 +64,7 @@
     B+树,适合结构化数据查询,支持join
     es 倒排索引 (正排索引:id对应一串字符串, 倒排索引:字符串分词,每个单词对应多个id),适合非机构化数据,适合全文索引
 
+13，链表操作(在线写代码)
 14，http状态码
     
     1**	信息，服务器收到请求，需要请求者继续执行操作
@@ -134,50 +122,12 @@
         
 22，数据库分表 / 分库 / 集群
 22.给定一个二叉树，返回二叉树每层的最左的值。
-   见同层 二叉树_打印每层最左侧.py
-   
 23.手里有一副扑克牌。按照下列规则吧他堆放桌上。一，拿出最上面的一张牌，放桌上，然后把接下来的一张牌放在扑克牌的最下面。循环，直到没有手牌。现在已知桌上牌的顺序。求原手牌的顺序。
-24.redis内存不足，如何解决 [https://www.cnblogs.com/blogofbin/p/11668344.html]
-
-    1，增加内存；
-    2，使用内存淘汰策略。
-    3，Redis集群。
-    
+24.redis内存不足，如何解决
 25. mysql索引的使用和原理
-26. epoll和poll,select的区别 [https://www.cnblogs.com/aspirant/p/9166944.html]
+26. epoll和poll,select的区别
 27.实现一个有顺序的LinkedList，实现deleteAll(int val)方法删除所有值为val的节点，和save(int val)方法添加一个值为val的节点。
 28.线程池的工作流程。线程的几种状态，什么情况会进入阻塞
-
-    Java中线程的状态分为6种。
-    
-    1. 初始(NEW)：新创建了一个线程对象，但还没有调用start()方法。
-    2. 运行(RUNNABLE)：Java线程中将就绪（ready）和运行中（running）两种状态笼统的称为“运行”。
-    线程对象创建后，其他线程(比如main线程）调用了该对象的start()方法。该状态的线程位于可运行线程池中，等待被线程调度选中，获取CPU的使用权，此时处于就绪状态（ready）。就绪状态的线程在获得CPU时间片后变为运行中状态（running）。
-    3. 阻塞(BLOCKED)：表示线程阻塞于锁。
-    4. 等待(WAITING)：进入该状态的线程需要等待其他线程做出一些特定动作（通知或中断）。
-    5. 超时等待(TIMED_WAITING)：该状态不同于WAITING，它可以在指定的时间后自行返回。
-    6. 终止(TERMINATED)：表示该线程已经执行完毕。
-    
-    [python线程的五种状态](https://blog.csdn.net/u010467184/article/details/106081500)
-    新建,就绪,运行,阻塞,死亡
-    线程会因为以下几种原因而被堵塞：
-
-        线程调用sleep()方法主动放弃它所占用的处理器资源；
-        线程调用一个阻塞式I/O方法，在该方法返回之前，该线程将被堵塞；
-        线程试图获得一个锁对象，但该锁对象正被其它线程所持有；
-        线程在等待某个通知；
-    
-    线程会因为以下几种情况而解除堵塞：
-    
-        调用的sleep()方法超出了指定时间；
-        线程调用的阻塞式I/O方法已经返回；
-        线程成功地获得了试图获取的锁对象；
-        线程正在等待某个通知时，其它线程发出了通知；
-        
-    抢占式调度策略：对于采用抢占式调度策略的系统而言，系统会给每一个可执行线程一小段时间来处理任务，当该时间段过去后，程序会剥夺该线程占用的资源，
-    让其它线程获得执行的机会。在选择下一个线程时，系统会考虑线程的优先级。
-    协同式调度策略：在协同式调度策略下，只有当线程调用它的sleep()或yield()方法后才会放弃其所占用的资源，也就是说必须由线程主动放弃其所占的资源。
-        
 29.JDK基础 集合 锁 
 30.Mysql的索引结构 聚簇索引
 31限流。限流算法。令牌桶的不足
@@ -316,7 +266,54 @@ k个不同字符的子字符串的长度及子字符
 7.缓存设计
 8.并发控制（乐观锁，悲观锁）
 9.xss && csfr
-10. 杭州后台三面：推送的频率控制，   抖音评论列表的设计及缓存实现，   MySQL索引怎么建、http头、http header
+10. 杭州后台三面：推送的频率控制，   
+
+抖音评论列表的设计及缓存实现，
+
+    在详细体验了抖音的评论系统之后，发现有以下特点:
+    
+    1.视频作者的评论优先显示
+    2.关注的人的评论优先显示
+    3.其余评论按照时间倒序显示
+    两张表设计，comment，评论信息表，reply 回复信息表
+    我认为是对评论id进行缓存，
+
+    1.作者对本视频回复，那么可以缓存作者的评论id。
+    2.好友优先显示，可缓存每个用户对每个视频的评论id，这一步实际上可以吧作者缓存这个干掉了
+    3.按评论id逆序。
+    4，如高赞回答，就需要独立对视频高赞维护一个list。
+    
+    评论表的设计如下：
+
+    表字段	字段说明
+    id	主键
+    topic_id	主题ID
+    topic_type	主题type
+    content	评论内容
+    from_uid	评论用户id
+    like        点赞数
+    dislike     反对数
+    
+    回复表的设计如下：
+
+    表字段	字段说明
+    id	主键
+    comment_id	评论ID
+    reply_id	回复目标id
+    reply_type	回复类型
+    content	回复内容
+    from_uid	回复用户id
+    to_uid	目标用户id
+    
+    优化的方式也有很多:
+
+    分库分表。分库分表是最为常用也最有效的优化方式，建议按照主题来分库分表。这样同一个主题下面的评论就会落到同一张表里，避免了跨表查询。
+    
+    适当的数据冗余。如果你需要显示评论人的相关信息，那么在插入评论时就把这些信息写入评论表中，避免多次查询。实际上，如果是纪录数据，都可以冗余对应的数据信息，因为它们的数据的实时行和一致性要求并不高，用户不会因为评论中的头像没更新而撕了你，哈哈。
+    
+    附加幂等数据只允许单项操作。如果pd要求你能给评论点赞，那么你可以告诉他只能点赞，不能取消。因为从幂等性的要求来说，每个赞都是一条记录。评论的赞数如果都从点赞表中统计得出，那么性能开销会十分巨大，而且点赞如此轻量级的一个操作一定会加剧点赞表的竞争操作。所以建议直接在评论表中添加一个like_count的计数器，该字段只增不减。热门评论加缓存。类似于网易新闻的热门评论，读取频度非常高，可以专门开接口给客户端，同时该接口做缓存。
+    
+MySQL索引怎么建、http头、http header
 11. sizeof运算符计算要考虑哪些因素
      函数定义int a[100000]可能出现什么问题
      一百万个用户抽奖，奖品只有1000个，每人最多中奖一次，每个用户中奖倍率不一样，给出代码实现。
