--- a/面试/其他.md
+++ b/面试/其他.md
@@ -21,3 +21,58 @@ https://blog.csdn.net/xinzhongtianxia/article/details/86221241
 https://github.com/RussellLuo/timingwheel
 https://github.com/raylin0310/timewheel/blob/master/timewheel.go
 
+# python 数据结构 队列,栈,堆
+
+栈(stacks)是一种只能通过访问其一端来实现数据存储与检索的线性数据结构，具有后进先出(last in first out，LIFO)的特征
+
+队列(queue)是一种具有先进先出特征的线性数据结构，元素的增加只能在一端进行，元素的删除只能在另一端进行。能够增加元素的队列一端称为队尾，可以删除元素的队列一端则称为队首。python库from collections import deque 是双端队列和list类似,但可以通过限制单边操作达到多种队列的效果.
+
+二叉堆：是一棵特殊的完全二叉树，其特点：
+二叉树中的所有的父节点的值都不大于/不小于其子节点；
+根节点的值必定是所有节点中最小/最大的
+将父节点的值不大于子节点且根节点值最小的称为最小堆，反之称为最大堆。堆是一种高级的数据结构,但Python没有独立的堆类型，而只有一个包含一些堆操作函数的模块。
+这个模块名为heapq（其中的q表示队列），它包含6个函数，其中前4个与堆操作直接相关。必须使用列表来表示堆对象本身。
+堆是非线性的树形的数据结构，有两种堆,最大堆与最小堆。（ heapq库中的堆默认是最小堆）
+最大堆，树种各个父节点的值总是大于或等于任何一个子节点的值。
+最小堆，树种各个父节点的值总是小于或等于任何一个子节点的值。
+
+heapq模块提供了如下几个函数：
+```
+heapq.heappush(heap, item) 把item添加到heap中（heap是一个列表）
+heapq.heappop(heap) 把堆顶元素弹出，返回的就是堆顶
+heapq.heappushpop(heap, item) 先把item加入到堆中，然后再pop，比heappush()再heappop()要快得多
+heapq.heapreplace(heap, item) 先pop，然后再把item加入到堆中，比heappop()再heappush()要快得多
+heapq.heapify(x) 将列表x进行堆调整，默认的是小顶堆
+heapq.merge(*iterables) 将多个列表合并，并进行堆调整，返回的是合并后的列表的迭代器
+heapq.nlargest(n, iterable, key=None) 返回最大的n个元素（Top-K问题）
+heapq.nsmallest(n, iterable, key=None) 返回最小的n个元素（Top-K问题）
+```
+
+# [python还有个独立的queue模块](https://docs.python.org/zh-cn/3.8/library/queue.html#module-queue)
+queue模块实现了3种类型的队列，区别在于队列中条目检索的顺序不同。
+queue.Queue()FIFO先进先出，同数据结构的队列
+queue.LifoQueue()LIFO,后进先出,同数据结构的栈
+queue.PriorityQueue()优先级队列，条目被保存为有序的（内部使用heapq模块实现）并且最小值的条目被最先检索。
+
+# 但是python中实现了多种队列,每种队列有各自的使用场景.
+queue 是多线程中的使用的栈，但是Python 解释器有一个全局解释器锁(PIL)，导致每个 Python 进程中最多同时运行一个线程，因此 Python 多线程程序并不能改善程序性能，不能发挥多核系统的优势。
+multiprocessing.Queue 是Python 2.6 引入的用来实现多进程的一种高性能栈。
+collections.deque 是为了高效实现插入和删除操作的双向列表适合用于队列和栈,是支持线程安全的,主要使用场景是单线程中进行某些算法操作时使用。
+
+
+
+
+
+# python 内存堆栈
+
+内存中的堆栈和数据结构堆栈不是一个概念，可以说内存中的堆栈是真实存在的物理区，数
+据结构中的堆栈是抽象的数据存储结构。
+内存空间在逻辑上分为三部分：代码区、静态数据区和动态数据区，动态数据区又分为栈区
+和堆区。
+代码区：存储方法体的二进制代码。高级调度（作业调度）、中级调度（内存调度）、低级
+调度（进程调度）控制代码区执行代码的切换。
+静态数据区：存储全局变量、静态变量、常量，常量包括final修饰的常量和String常量。系
+统自动分配和回收。
+栈区：存储运行方法的形参、局部变量、返回值。由系统自动分配和回收。
+堆区：new一个对象的引用或地址存储在栈区，指向该对象存储在堆区中的真实数据。
+
