--- a/面试/字节.md
+++ b/面试/字节.md
@@ -1,3 +1,5 @@
+# [面试题网页版](https://www.cnblogs.com/wyp1988/p/12070850.html)
+
 一面
 1.	http状态码/header/请求方法, 哪些请求方法是幂等的
     
@@ -124,6 +126,45 @@
 22.给定一个二叉树，返回二叉树每层的最左的值。
 23.手里有一副扑克牌。按照下列规则吧他堆放桌上。一，拿出最上面的一张牌，放桌上，然后把接下来的一张牌放在扑克牌的最下面。循环，直到没有手牌。现在已知桌上牌的顺序。求原手牌的顺序。
 24.redis内存不足，如何解决
+```
+Redis缓存删除策略 & redis内存不足，如何解决
+被动删除：当读/写一个已经过期的key时，会触发惰性删除策略，直接删除掉这个过期key
+注：被动删除：只有key被操作时(如GET)，REDIS才会被动检查该key是否过期，如果过期则删除之并且返回NIL。
+主动删除：由于惰性删除策略无法保证冷数据被及时删掉，所以Redis会定期主动淘汰一批已过期的key
+过期的
+Redis会周期性的随机测试一批设置了过期时间的key并进行处理。测试到的已过期的key将被删除。
+如果没有设置时间，那缓存就是永不过期
+如果设置了过期时间，之后又想让缓存永不过期，使用persist key
+redis过期怎么实现
+Redis过期策略---实现原理
+三种过期策略
+定时删除：在设置key的过期时间的同时，为该key创建一个定时器，让定时器在key的过期时间来临时，对key进行删除
+懒汉式删除：key过期的时候不删除，每次通过key获取值的时候去检查是否过期，若过期，则删除，返回null（用的时候再检查删除）。
+定期删除：每隔一段时间执行一次删除过期key操作
+内存满了时
+Redis是基于内存的key-value数据库，因为系统的内存大小有限，所以我们在使用Redis的时候可以配置Redis能使用的最大的内存大小。
+通过在Redis安装目录下面的redis.conf配置文件中添加以下配置设置内存大小：maxmemory 100mb
+Redis支持运行时通过命令动态修改内存大小：config set maxmemory 100mb
+Redis的内存淘汰（当前已用内存超过maxmemory限定时，触发主动清理策略）
+Redis内存满了的解决办法
+既然可以设置Redis最大占用内存大小，那么配置的内存就有用完的时候。那在内存用完的时候，还继续往Redis里面添加数据不就没内存可用了吗？
+LRU：表示最近最少使用； LFU：表示最不常用的
+实际上Redis定义了几种策略用来处理这种情况：
+noeviction(默认策略)：对于写请求不再提供服务，直接返回错误（DEL请求和部分特殊请求除外）
+volatile-lru：从设置了过期时间的key中使用LRU算法进行淘汰
+allkeys-lru：从所有key中使用LRU算法进行淘汰
+volatile-lfu 筛选出设置了有效期的，最不常用的 key；
+allkeys-lfu 所有 key 中，筛选出最不常用的 key ；
+allkeys-random：从所有key中随机淘汰数据
+volatile-random：从设置了过期时间的key中随机淘汰
+volatile-ttl：在设置了过期时间的key中，根据key的过期时间进行淘汰，越早过期的越优先被淘汰
+当使用volatile-lru、volatile-random、volatile-ttl这三种策略时，如果没有key可以被淘汰，则和noeviction一样返回错误。
+通过配置文件设置淘汰策略（修改redis.conf文件）：maxmemory-policy allkeys-lru
+通过命令修改淘汰策略：config set maxmemory-policy allkeys-lru
+Redis使用的是近似LRU算法，它跟常规的LRU算法还不太一样。近似LRU算法通过随机采样法淘汰数据，每次随机出5（默认）个key，从里面淘汰掉最近最少使用的key。可以通过maxmemory-samples参数修改采样数量：例：maxmemory-samples 10
+Redis3.0对近似LRU算法进行了一些优化。新算法会维护一个候选池（大小为16），池中的数据根据访问时间进行排序，第一次随机选取的key都会放入池中，随后每次随机选取的key只有在访问时间小于池中最小的时间才会放入池中，直到候选池被放满。当放满后，如果有新的key需要放入，则将池中最后访问时间最大（最近被访问）的移除。
+LFU算法是Redis4.0里面新加的一种淘汰策略。它的全称是Least Frequently Used，它的核心思想是根据key的最近被访问的频率进行淘汰，很少被访问的优先被淘汰，被访问的多的则被留下来。
+```
 25. mysql索引的使用和原理
 26. epoll和poll,select的区别
 27.实现一个有顺序的LinkedList，实现deleteAll(int val)方法删除所有值为val的节点，和save(int val)方法添加一个值为val的节点。
@@ -188,6 +229,24 @@
 81、Redis缓存删除策略
 82、编码实现LRU算法
 83、统计大量访问日志（分几百M 和 几百G的场景）；得出访问次数最多的前K个人 （单台机器实现）
+```
+100G 数据，按照 100M 内存拆分，然后排序有序的数据，然后写入到 file1,file2…file100。
+
+多路归并。
+
+第一回合：
+
+从 file1,file2,file3……file100.取出第一个数。及最小的。所有的初始指针都是第一行。
+
+min1=min(min1=min(fil1,file2,file3……file100)；file2,file3……file100)；min1 写入到大数据文件。大数据行数指针+1。min1对应的行数指针+1。第二回合：从file1,file2,file3……file100.取出第一个数。及最小的。所有的初始指针都是第一行。min1对应的行数指针+1。
+
+第二回合：从file1,file2,file3……file100.取出第一个数。及最小的。所有的初始指针都是第一行。min2 = min(fil1,fil1,file2,file3……file100)；
+
+min2写入到大数据文件。大数据行数指针+1。min2写入到大数据文件。大数据行数指针+1。min2 对应的行数指针+1。
+
+。。。
+```
+
 84. 给你一个连续素数数组 让你找出增长比第k小的位置
 85. 代码题：有序数组 A = [1, 2, 2, 3, 3, 5, 5, 5]，b = 5，在A中找出b的序号的上下界，考察思路和代码熟练度
 
@@ -319,7 +378,11 @@ MySQL索引怎么建、http头、http header
      一百万个用户抽奖，奖品只有1000个，每人最多中奖一次，每个用户中奖倍率不一样，给出代码实现。
 12.   1.     问了redis数据结构和实现
       2.     问hashmap
-      3.     浅拷贝深拷贝实现
+      3.     浅拷贝深拷贝实现   
+             首先深拷贝和浅拷贝都是对象的拷贝，都会生成一个看起来相同的对象，他们本质的区别是拷贝出来的对象的地址是否和原对象一样，也就是地址的复制还是值的复制的区别。
+             直接赋值：其实就是对象的引用（别名）。id(变量)是一样的.
+             浅拷贝(copy)：拷贝父对象，不会拷贝对象的内部的子对象。id(变量)不一样.
+             深拷贝(deepcopy)： copy 模块的 deepcopy 方法，完全拷贝了父对象及其子对象。id(变量)不一样.
       4.     把一面的算法题再做一次
       
 13. 项目聊很多（使用的中间件实现原理）
@@ -330,3 +393,55 @@ MySQL索引怎么建、http头、http header
     JIT即时编译原理
     排查线上问题经历、思路
     聊部门情况
+
+一个完整的 HTTP 请求会涉及到哪些协议？
+域名解析
+浏览器搜索自己的DNS缓存，缓存中维护一张域名与IP地址的对应表；
+若没有，则搜索操作系统的DNS缓存；
+若没有，则操作系统将域名发送至本地域名服务器（递归查询方式），本地域名服务器查询自己的DNS缓存，查找成功则返回结果，否则，通过以下方式迭代查找：
+本地域名服务器向根域名服务器发起请求，根域名服务器返回com域的顶级域名服务器的地址；
+本地域名服务器向com域的顶级域名服务器发起请求，返回权限域名服务器地址；
+本地域名服务器向权限域名服务器发起请求，得到IP地址；
+本地域名服务器将得到的IP地址返回给操作系统，同时自己将IP地址缓存起来；
+操作系统将IP地址返回给浏览器，同时自己也将IP地址缓存起来；
+至此，浏览器已经得到了域名对应的IP地址。
+发起http请求
+传输层，选择传输协议，TCP或者UDP，TCP是可靠的传输控制协议，对HTTP请求进行封装，加入了端口号等信息。发起TCP的3次握手（底层在局域网还有arp等）建立TCP连接。
+网络层，通过IP协议将IP地址封装为IP数据报；然后此时会用到ARP协议，主机发送信息时将包含目标IP地址的ARP请求广播到网络上的所有主机，并接收返回消息，以此确定目标的物理地址，找到目的MAC地址；
+数据链路层，把网络层交下来的IP数据报添加首部和尾部，封装为MAC帧，现在根据目的mac开始建立TCP连接，三次握手，接收端在收到物理层上交的比特流后，根据首尾的标记，识别帧的开始和结束，将中间的数据部分上交给网络层，然后层层向上传递到应用层；
+服务器端响应http请求，浏览器得到html代码
+浏览器解析html代码，并请求html代码中的资源
+浏览器对页面进行渲染呈现给用户。
+
+python 垃圾回收:采用引用计算机制为主，标记——清除和分代收集两种机制为辅的策略。
+https://www.cnblogs.com/xiugeng/p/10514101.html
+https://www.cnblogs.com/libochou/p/10150048.html
+1.引用计数
+    引用计数机制的缺点：
+        1、维护引用计数消耗资源
+        2、循环引用,导致内存泄露,Python的引用计数算法不能够处理互相指向自己的对象。
+
+        ```python
+        list1=[1,2,3]
+        list2=[4,5,6]
+        list1.append(list2)
+        #list1
+        [1, 2, 3, [4, 5, 6]]
+        list2.append(list1)
+        #list1
+        [1, 2, 3, [4, 5, 6, [...]]]
+        #list2
+        [4, 5, 6, [1, 2, 3, [...]]]
+        ```
+        
+2.标记清除
+分为两个阶段：
+第一阶段是标记阶段，GC会把所有的『活动对象』打上标记
+第二阶段是把那些没有标记的对象『非活动对象』进行回收。
+对象之间通过引用（指针）连在一起，构成一个有向图，对象构成这个有向图的节点，而引用关系构成这个有向图的边。从根对象（root object）出发，沿着有向边遍历对象，可达的（reachable）对象标记为活动对象，不可达的对象就是要被清除的非活动对象。根对象就是全局变量、调用栈、寄存器。
+标记清除算法作为Python的辅助垃圾收集技术主要处理的是一些容器对象，比如list、dict、tuple，instance等可能造成循环引用的类型
+
+3.分代回收
+分代回收是一种以空间换时间的操作方式，Python将内存根据对象的存活时间划分为不同的集合，每个集合称为一个代，Python将内存分为了3“代”，分别为年轻代（第0代）、中年代（第1代）、老年代（第2代），他们对应的是3个链表，它们的垃圾收集频率与对象的存活时间的增大而减小。新创建的对象都会分配在年轻代，年轻代链表的总数达到上限时，Python垃圾收集机制就会被触发，把那些可以被回收的对象回收掉，而那些不会回收的对象就会被移到中年代去，依此类推，老年代中的对象是存活时间最久的对象，甚至是存活于整个系统的生命周期内。同时，分代回收是建立在标记清除技术基础之上。分代回收同样作为Python的辅助垃圾收集技术处理那些容器对象
+
+
